--- a/apellido-nombre.html
+++ b/apellido-nombre.html
@@ -15,14 +15,15 @@
                     height="30" 
                     class="d-inline-block align-top" alt="Acamica">
                     &nbsp;
-                    Proyecto 2 - DWFS-COR8
+                    DWFS-COR8
             </a>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">
-                            Principal 
-                            <span class="sr-only"></span>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html" 
+                            id="navbarDropdown" role="button" 
+                            aria-haspopup="true" aria-expanded="false">
+                            Volver al principal
                         </a>
                     </li>
                 </ul>
@@ -31,7 +32,7 @@
         <div class="container">
             <div class="card mt-4">
                 <div class="card-header">
-                    Arrays y bucles
+                    Arrays y bucles / [Nombre Apellido]
                 </div>
                 <div class="card-body">
                     <div class="row pull-right">
@@ -41,13 +42,19 @@
                                 <input type="text" 
                                     class="form-control" 
                                     placeholder="Buscar por nombre" 
-                                    aria-label="Recipient's username" 
-                                    aria-describedby="button-addon2">
+                                    id="busquedaNombre">
                                 <div class="input-group-append">
                                     <button 
                                         class="btn btn-outline-primary" 
+                                        onclick="onBusquedaPersona()"
                                         type="button" id="button-addon2">
                                         Buscar
+                                    </button>
+                                    <button 
+                                        class="btn btn-outline-primary" 
+                                        onclick="onLimpiarBusquedaPersona()"
+                                        type="button">
+                                        Reset
                                     </button>
                                 </div>
                             </div>
@@ -70,27 +77,22 @@
                                     <button class="dropdown-item" 
                                         data-toggle="modal"
                                         data-target="#mdlPersona"
+                                        onclick="limpiarNuevaPersona()"
                                         type="button">Agregar persona
                                     </button>
                                     <button class="dropdown-item" 
+                                        onclick="eliminarPrimero()"
                                         type="button">
                                         Eliminar primero
                                     </button>
                                     <button class="dropdown-item" 
+                                        onclick="eliminarUltimo()"
                                         type="button">
                                         Eliminar ultimo
                                     </button>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-sm-4 pull-rigth">
-                            <button type="button" 
-                                data-toggle="modal"
-                                data-target="#exampleModal"
-                                onclick="agregarPersona()" class="btn btn-primary">
-                                Agregar
-                            </button>
-                        </div> -->
                     </div>
                     <div class="row">
                         <table id="tablePersonas" class="table table-hover table-striped table-sm">
@@ -104,12 +106,6 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- <tr>
-                                    <td class="text-center">2</td>
-                                    <td class="text-center">3</td>
-                                    <td class="text-center">4</td>
-                                    <td class="text-center">5</td>
-                                </tr> -->
                             </tbody>
                         </table>
                     </div>
@@ -119,51 +115,125 @@
         <div class="modal fade" id="mdlPersona" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Alta de persona</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="col-sm-12">
-                        <div class="form-group">
-                            <label class="form-label">Nombre</label>
-                            <input id="nombre" class="form-control" type="text">
-                        </div>
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Alta de persona</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                    <div class="col-sm-12">
-                        <div class="form-group">
-                            <label class="form-label">Apellido</label>
-                            <input id="apellido" class="form-control" type="text">
-                        </div>
+                    <div class="modal-body">
+                        <form id="frmPersona" novalidate>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="nombre">Nombre</label>
+                                    <input id="nombre" class="form-control" type="text" required>
+                                    <div class="invalid-feedback">
+                                        Ingrese un nombre
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="apellido">Apellido</label>
+                                    <input id="apellido" class="form-control" type="text" required>
+                                    <div class="invalid-feedback">
+                                        Ingrese un apellido
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="edad">Edad</label>
+                                    <input id="edad" class="form-control" type="number" required>
+                                    <div class="invalid-feedback">
+                                        Ingrese una edad
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="col-sm-12">
-                        <div class="form-group">
-                            <label class="form-label">Edad</label>
-                            <input id="edad" class="form-control" type="text">
-                        </div>
+                    <div class="modal-footer">
+                        <button type="button" 
+                            id="btnCloseNuevaPersona"
+                            class="btn btn-secondary" 
+                            data-dismiss="modal">
+                            Cancelar
+                        </button>
+                        <button type="button" 
+                            class="btn btn-primary" 
+                            onclick="leerPersona()">
+                            Guardar
+                        </button>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" 
-                        class="btn btn-secondary" 
-                        data-dismiss="modal">
-                        Cancelar
-                    </button>
-                    <button type="button" 
-                        class="btn btn-primary" 
-                        data-dismiss="modal"
-                        onclick="agregarPersona()">
-                        Guardar
-                    </button>
-                </div>
                 </div>
             </div>
         </div>
+        <button id="btnUpdate" type="button" class="btn" style="visibility:hidden" data-target="#mdlUpdate" data-toggle="modal">test</button>
+
+        <div class="modal fade" id="mdlUpdate" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-sm" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Actualizar persona</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="frmUpdatePersona" novalidate>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label class="form-label">Id</label>
+                                    <input id="idUpdate" disabled class="form-control" type="text">
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label class="form-label">Nombre</label>
+                                    <input id="nombreUpdate" class="form-control" type="text" required>
+                                    <div class="invalid-feedback">
+                                        Ingrese un nombre
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label class="form-label">Apellido</label>
+                                    <input id="apellidoUpdate" class="form-control" type="text" required>
+                                    <div class="invalid-feedback">
+                                        Ingrese un apellido
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label class="form-label">Edad</label>
+                                    <input id="edadUpdate" class="form-control" type="number" required>
+                                    <div class="invalid-feedback">
+                                        Ingrese una edad
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" 
+                            id="btnCloseUpdatePersona"
+                            class="btn btn-secondary" 
+                            data-dismiss="modal">
+                            Cancelar
+                        </button>
+                        <button type="button" 
+                            class="btn btn-primary" 
+                            onclick="leerPersonaActualizada()">
+                            Guardar
+                        </button>
+                    </div>
+                    </div>
+                </div>
+            </div>
 
 
-
-        <script src="./js/index.js"></script>
+        <script src="./js/apellido.nombre.js"></script>
     </body>
 </html>
