--- a/soria-gabriel.html
+++ b/soria-gabriel.html
@@ -237,6 +237,6 @@
             </div>
 
 
-        <script src="./js/apellido.nombre.js"></script>
+        <script src="./js/soria.gabriel.js"></script>
     </body>
 </html>
