--- a/otro-alumno.html
+++ b/otro-alumno.html
@@ -237,6 +237,6 @@
             </div>
 
 
-        <script src="./js/apellido.nombre.js"></script>
+        <script src="./js/otro.alumno.js"></script>
     </body>
 </html>
